src/warcraft/components/correct/tests/RouteTestsCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.Route;
import warcraft.components.tests.AbstractRouteTests;

public class RouteTestsCorrect extends AbstractRouteTests {

	@Override
	public void before() {
		route=new Route();
	}

}
